Add links to testing sandbox

--- a/ch14-dom/cats-hat.html
+++ b/ch14-dom/cats-hat.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 
+<!-- Extend the cat animation defined earlier so that both the cat and his hat
+    (<img src="img/hat.png">) orbit at opposite sides of the ellipse.
+    Or make the hat circle around the cat. Or alter the animation in some other
+    interesting way.
+
+    This code can be tested here: https://eloquentjavascript.net/code/#14.3
+-->
   <style>body { min-height: 200px }</style>
   <img src="img/cat.png" id="cat" style="position: absolute">
   <img src="img/hat.png" id="hat" style="position: absolute">
