--- a/ch14-dom/elements-by-tagname.html
+++ b/ch14-dom/elements-by-tagname.html
@@ -6,7 +6,7 @@
       and returns an array containing all descendant element nodes with
       the given tag name.
   
-      This code can be tested here: 
+      This code can be tested here: https://eloquentjavascript.net/code/#14.2
   -->
   
   <h1>Heading with a <span>span</span> element.</h1>
