--- a/ch14-dom/table.html
+++ b/ch14-dom/table.html
@@ -13,7 +13,7 @@
   Once you have this working, right-align cells that contain number values by
   setting their style.textAlign property to "right".
 
-  This code can be tested here:
+  This code can be tested here: https://eloquentjavascript.net/code/#14.1
 -->
 
 <h1>Mountains</h1>
