--- a/ch17-canvas/piechart.html
+++ b/ch17-canvas/piechart.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<script src="code/chapter/16_game.js"></script>
-<script src="code/levels.js"></script>
-<script src="code/chapter/17_canvas.js"></script>
+<script src="/ch17-canvas//17_canvas/code/chapter/16_game.js"></script>
+<script src="/ch17-canvas/17_canvas/code/levels.js"></script>
+<script src="/ch17-canvas/17_canvas/code/chapter/17_canvas.js"></script>
 
 <canvas width="600" height="300"></canvas>
 <script>
