Add descriptions of exercises to each exercise

--- a/ch17-canvas/bouncing-ball.html
+++ b/ch17-canvas/bouncing-ball.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+
+<!--
+  Use the requestAnimationFrame technique that we saw in Chapter 14 and
+  Chapter 16 to draw a box with a bouncing ball in it. The ball moves at
+  a constant speed and bounces off the box’s sides when it hits them.
+-->
+
 <script src="/ch17-canvas/17_canvas/code/chapter/16_game.js"></script>
 <script src="/ch17-canvas/17_canvas/code/levels.js"></script>
 <script src="/ch17-canvas/17_canvas/code/chapter/17_canvas.js"></script>"
