--- a/ch17-canvas/shapes.html
+++ b/ch17-canvas/shapes.html
@@ -1,4 +1,15 @@
 <!doctype html>
+
+<!--
+  Write a program that draws the following shapes on a canvas:
+
+1. A trapezoid (a rectangle that is wider on one side)
+2. A red diamond (a rectangle rotated 45 degrees or ¼π radians)
+3. A zigzagging line
+4. A spiral made up of 100 straight line segments
+5. A yellow star
+-->
+
 <script src="code/chapter/16_game.js"></script>
 <script src="code/levels.js"></script>
 <script src="code/chapter/17_canvas.js"></script>
