--- a/ch17-canvas/piechart.html
+++ b/ch17-canvas/piechart.html
@@ -1,4 +1,14 @@
 <!doctype html>
+
+<!--
+  Earlier in the chapter, we saw an example program that drew a pie chart.
+  Modify this program so that the name of each category is shown next
+  to the slice that represents it. Try to find a pleasing-looking way
+  to automatically position this text that would work for other data
+  sets as well. You may assume that categories are big enough to leave
+  ample room for their labels.
+-->
+
 <script src="/ch17-canvas//17_canvas/code/chapter/16_game.js"></script>
 <script src="/ch17-canvas/17_canvas/code/levels.js"></script>
 <script src="/ch17-canvas/17_canvas/code/chapter/17_canvas.js"></script>
